syntax = "proto3";

package pyth_lazer_transaction;

import "publisher_update.proto";

enum TransactionSignatureType {
  ed25519 = 0;
}

message SignedLazerTransaction {
  TransactionSignatureType signature_type = 1;
  bytes signature = 2;
  bytes transaction = 3;
}

message LazerTransaction {
  oneof payload {
    PublisherUpdate publisher_updates = 1;
  }
}
